@@ -35,6 +35,7 @@ included, please mail to `the Google group
 * MyHDL: http://www.myhdl.org/doc/0.6/
 * NetworkX: http://networkx.lanl.gov/
 * NOC: http://trac.nocproject.org/trac/wiki/NocGuide
+* nose: http://somethingaboutorange.com/mrl/projects/nose/
 * NumPy: http://docs.scipy.org/doc/numpy/reference/
 * ObjectListView: http://objectlistview.sourceforge.net/python
 * Open ERP: http://doc.openerp.com/
