@@ -38,6 +38,8 @@ Release 1.0 (in development)
 Release 0.6.4 (in development)
 ==============================
 
+* Fix the handling of non-data descriptors in autodoc.
+
 
 Release 0.6.3 (Sep 03, 2009)
 ============================
